--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#97c964",
   "background_color": "#97c964",
   "display": "standalone",
-  "Scope": "/",
+  "Scope": "/public/",
   "start_url": "/",
   "icons": [
     {
