--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,10 @@
   "theme_color": "#97c964",
   "background_color": "#97c964",
   "display": "standalone",
-  "Scope": "/public/",
-  "start_url": "/",
+  "Scope": "/",
+  "start_url": "https://ibiome.herokuapp.com/index.html",
   "icons": [
+    
     {
       "src": "images/icons/icon-72x72.png",
       "sizes": "72x72",
